# joint_state_publisher

./: CMakeLists.txt  README.md  package.xml
launch/: control.launch.py  perception.launch.py  planner.launch.py  robot.launch.py
robots/g1_description/: g1_29dof_lock_waist_with_hand_rev_1_0.urdf  g1_29dof_lock_waist_with_hand_rev_1_0_collision_primitives.urdf
src/: detection_to_goal_node.cpp  dex3_controller.cpp  ik_fcl_ompl_planner.cpp  joint_state_publisher.cpp  joint_trajectory_executor.cpp  project_to_3d_node.cpp
