<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>joint_state_publisher</name>
  <version>0.1.0</version>
  <description>Node to publish unitree joint states</description>

  <maintainer email="you@example.com">Your Name</maintainer>
  <license>MIT</license>

  <!-- Core dependencies -->
  <buildtool_depend>ament_cmake</buildtool_depend>

  <depend>rclcpp</depend>
  <depend>sensor_msgs</depend>
  <depend>unitree_hg</depend>
  <depend>geometry_msgs</depend>
  <depend>std_msgs</depend>

  <!-- Export information for build tools -->
  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
